--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "api-types": "api-extractor run --local"
   },
   "peerDependencies": {
-    "react": "^17"
+    "react": ">= 16.8.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.15.7",
