--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,15 @@
-node_modules
-coverage
-*.log
-lib
-dist
-es
-builds/
+node_modules/
+coverage/
+dist/
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+.DS_Store
+.vscode
+.docz/
 package-lock.json
+coverage/
+.idea
+.rpt2_cache/
+.idea
