--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-use-reducer",
   "version": "1.0.0",
+  "private": true,
   "license": "MIT",
   "description": "Hook for React useReducer",
   "repository": "github:bcd337/react-use-reducer",
@@ -9,64 +10,138 @@
     "react-use-reducer",
     "useReducer"
   ],
-  "author": "Muhamad Iqbal <muh.iqbal6600@gmail.com>",
-  "main": "lib/index.js",
-  "module": "es/index.js",
-  "types": "es/index.d.ts",
+  "author": "Muhamad Iqbal",
+  "main": "./index.js",
+  "types": "./index.d.ts",
   "sideEffects": false,
+  "typesVersions": {
+    "<4.0": {
+      "esm/*": [
+        "ts3.4/*"
+      ],
+      "*": [
+        "ts3.4/*"
+      ]
+    }
+  },
   "files": [
-    "lib",
-    "es",
-    "src",
-    "dist"
+    "**"
   ],
+  "exports": {
+    "./package.json": "./package.json",
+    ".": {
+      "types": "./index.d.ts",
+      "module": "./esm/index.js",
+      "import": "./esm/index.mjs",
+      "default": "./index.js"
+    },
+    "./createReducer": {
+      "types": "./createReducer.d.ts",
+      "module": "./esm/createReducer.js",
+      "import": "./esm/createReducer.mjs",
+      "default": "./createReducer.js"
+    },
+    "./useReducer": {
+      "types": "./useReducer.d.ts",
+      "module": "./esm/useReducer.js",
+      "import": "./esm/useReducer.mjs",
+      "default": "./useReducer.js"
+    }
+  },
   "scripts": {
-    "clean": "rimraf lib dist es",
+    "prebuild": "shx rm -rf dist",
+    "build": "concurrently -m 8 'yarn:build:*'",
+    "build:base": "rollup -c",
+    "build:createReducer": "rollup -c --config-createReducer",
+    "build:useReducer": "rollup -c --config-useReducer",
+    "clean": "rimraf dist",
     "prepublishOnly": "npm run clean && npm run lint && npm run test && npm run build",
-    "format": "prettier --write {src,test,typescript_test}/**/*.{js,ts}",
-    "format:check": "prettier --check {src,test,typescript_test}/**/*.{js,ts}",
-    "lint": "eslint {src,test,typescript_test}/**/*.{js,ts}",
+    "prettier": "prettier '*.{js,json,md}' --write",
+    "prettier:ci": "prettier '*.{js,json,md}' --list-different",
+    "eslint": "eslint --fix '*.{js,json}' '{src,tests}/**/*.{ts,tsx}'",
+    "eslint:ci": "eslint '*.{js,json}' '{src,tests}/**/*.{ts,tsx}'",
+    "pretest": "tsc --noEmit",
     "test": "jest",
-    "test:cov": "jest --coverage",
-    "test:typescript": "npm run test:typescript:main && npm run test:typescript:extended",
-    "test:typescript:main": "tsc --noEmit -p typescript_test/tsconfig.json",
-    "test:typescript:extended": "tsc --noEmit -p typescript_test/typescript_extended/tsconfig.json",
-    "build:commonjs": "cross-env BABEL_ENV=commonjs babel src/*.ts --ignore src/types.ts --extensions .ts --out-dir lib ",
-    "build:es": "babel src/*.ts --ignore src/types.ts --extensions .ts --out-dir es",
-    "build:umd": "cross-env NODE_ENV=development rollup -c -o dist/react-use-reducer.js",
-    "build:umd:min": "cross-env NODE_ENV=production rollup -c -o dist/react-use-reducer.min.js",
-    "build:types": "tsc",
-    "build": "rimraf dist lib es && npm run build:types && npm run build:commonjs && npm run build:es && npm run build:umd && npm run build:umd:min",
-    "api-types": "api-extractor run --local"
+    "test:ci": "jest",
+    "test:dev": "jest --watch --no-coverage",
+    "test:coverage:watch": "jest --watch"
+  },
+  "engines": {
+    "node": ">=12.7.0"
+  },
+  "prettier": {
+    "semi": false,
+    "trailingComma": "es5",
+    "singleQuote": true,
+    "bracketSameLine": true,
+    "tabWidth": 2,
+    "printWidth": 80
+  },
+  "jest": {
+    "rootDir": ".",
+    "testEnvironment": "jsdom",
+    "transform": {
+      "^.+\\.(t|j)sx?$": [
+        "@swc/jest"
+      ]
+    },
+    "globals": {
+      "__DEV__": true
+    },
+    "moduleNameMapper": {
+      "^react-use-reducer$": "<rootDir>/src/index.ts",
+      "^react-use-reducer/(.*)$": "<rootDir>/src/$1.ts"
+    },
+    "modulePathIgnorePatterns": [
+      "dist"
+    ],
+    "testRegex": "test.(js|ts|tsx)$",
+    "coverageDirectory": "./coverage/",
+    "collectCoverage": true,
+    "coverageReporters": [
+      "json",
+      "html",
+      "text",
+      "text-summary"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.{js,ts,tsx}",
+      "tests/**/*.{js,ts,tsx}"
+    ]
   },
   "peerDependencies": {
     "react": ">=16.8.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.15.7",
-    "@babel/core": "^7.15.8",
-    "@babel/preset-env": "^7.15.8",
-    "@babel/preset-typescript": "^7.15.0",
-    "@babel/register": "^7.15.3",
-    "@microsoft/api-extractor": "^7.18.16",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^21.0.1",
-    "@rollup/plugin-node-resolve": "^13.0.6",
-    "@rollup/plugin-replace": "^3.0.0",
-    "@types/jest": "^27.0.2",
-    "@types/react": "^16.8.0",
-    "@typescript-eslint/eslint-plugin": "^5.1.0",
-    "@typescript-eslint/parser": "^5.1.0",
-    "cross-env": "^7.0.3",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "jest": "^27.3.1",
-    "prettier": "^2.4.1",
-    "react": "^16.8.0",
+    "@babel/cli": "^7.18.9",
+    "@babel/core": "^7.18.9",
+    "@babel/plugin-transform-react-jsx": "^7.18.6",
+    "@babel/plugin-transform-typescript": "^7.18.8",
+    "@babel/preset-env": "^7.18.9",
+    "@rollup/plugin-alias": "^3.1.9",
+    "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-replace": "^4.0.0",
+    "@rollup/plugin-typescript": "^8.3.3",
+    "@swc/core": "^1.2.218",
+    "@swc/jest": "^0.2.22",
+    "@types/jest": "^28.1.6",
+    "@types/react": "^18.0.15",
+    "@typescript-eslint/eslint-plugin": "^5.31.0",
+    "@typescript-eslint/parser": "^5.31.0",
+    "concurrently": "^7.3.0",
+    "esbuild": "^0.14.50",
+    "eslint": "^8.20.0",
+    "eslint-config-prettier": "^8.5.0",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
+    "prettier": "^2.7.1",
+    "react": "^18.2.0",
     "rimraf": "^3.0.2",
-    "rollup": "^2.58.1",
+    "rollup": "^2.77.2",
+    "rollup-plugin-esbuild": "^4.9.1",
     "rollup-plugin-terser": "^7.0.2",
-    "ts-jest": "27.0.7",
-    "typescript": "^4.4"
+    "typescript": "^4.7",
+    "shx": "^0.3.4"
   }
 }
