--- a/.eslintrc
+++ b/.eslintrc
@@ -1,129 +1,52 @@
 {
-  "env": {
-    "browser": true,
-    "shared-node-browser": true,
-    "node": true,
-    "es6": true
-  },
+  "root": true,
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
-    "prettier",
-    "plugin:prettier/recommended",
-    "plugin:react-hooks/recommended",
-    "plugin:import/errors",
-    "plugin:import/warnings"
-  ],
-  "plugins": [
-    "@typescript-eslint",
-    "react",
-    "prettier",
-    "react-hooks",
-    "import",
-    "jest"
+    "plugin:@typescript-eslint/recommended-requiring-type-checking",
+    "airbnb",
+    "airbnb/hooks",
+    "airbnb-typescript"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "ecmaVersion": 2018,
-    "sourceType": "module",
-    "ecmaFeatures": {
-      "jsx": true
-    }
-  },
-  "rules": {
-    "eqeqeq": "error",
-    "no-var": "error",
-    "prefer-const": "error",
-    "curly": ["warn", "multi-line", "consistent"],
-    "no-console": "off",
-    "import/no-unresolved": ["error", { "commonjs": true, "amd": true }],
-    "import/export": "error",
-    "@typescript-eslint/no-duplicate-imports": ["error"],
-    "@typescript-eslint/explicit-module-boundary-types": "off",
-    "@typescript-eslint/no-unused-vars": [
-      "warn",
-      { "argsIgnorePattern": "^_", "varsIgnorePattern": "^_" }
-    ],
-    "@typescript-eslint/no-use-before-define": "off",
-    "@typescript-eslint/no-empty-function": "off",
-    "@typescript-eslint/no-explicit-any": "off",
-    "jest/consistent-test-it": [
-      "error",
-      { "fn": "it", "withinDescribe": "it" }
-    ],
-    "import/order": [
-      "error",
-      {
-        "alphabetize": { "order": "asc", "caseInsensitive": true },
-        "groups": [
-          "builtin",
-          "external",
-          "internal",
-          "parent",
-          "sibling",
-          "index",
-          "object"
-        ],
-        "newlines-between": "never",
-        "pathGroups": [
-          {
-            "pattern": "react",
-            "group": "builtin",
-            "position": "before"
-          }
-        ],
-        "pathGroupsExcludedImportTypes": ["builtin"]
-      }
-    ],
-    "react/jsx-uses-react": "off",
-    "react/react-in-jsx-scope": "off",
-    "sort-imports": [
-      "error",
-      {
-        "ignoreDeclarationSort": true
-      }
+    "project": [
+      "./tsconfig.json"
     ]
   },
-  "settings": {
-    "react": {
-      "version": "detect"
-    },
-    "import/extensions": [".js", ".jsx", ".ts", ".tsx"],
-    "import/parsers": {
-      "@typescript-eslint/parser": [".js", ".jsx", ".ts", ".tsx"]
-    },
-    "import/resolver": {
-      "node": {
-        "extensions": [".js", ".jsx", ".ts", ".tsx", ".json"],
-        "paths": ["src"]
-      },
-      "alias": {
-        "extensions": [".js", ".jsx", ".ts", ".tsx", ".json"],
-        "map": [
-          ["^zustand$", "./src/index.ts"],
-          ["zustand", "./src"]
-        ]
+  "plugins": [
+    "@typescript-eslint"
+  ],
+  "rules": {
+    "semi":"off",
+    "@typescript-eslint/semi": "off",
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-unsafe-argument": "off",
+    "@typescript-eslint/no-unsafe-call": "off",
+    "@typescript-eslint/no-non-null-assertion": "off",
+    "@typescript-eslint/no-unsafe-assignment": "off",
+    "@typescript-eslint/no-unsafe-member-access": "off",
+    "@typescript-eslint/no-unsafe-return": "off",
+    "@typescript-eslint/restrict-plus-operands": "off",
+    "@typescript-eslint/restrict-template-expressions": "off",
+    "@typescript-eslint/strict-boolean-expressions": "off",
+    "no-restricted-exports": "off",
+    "prefer-arrow-callback": [
+      "error",
+      {
+        "allowNamedFunctions": true
       }
-    }
+    ],
+    "react/jsx-props-no-spreading": "off",
+    "react/require-default-props": "off",
+    "react/function-component-definition": "off",
+    "import/no-extraneous-dependencies": "off",
+    "no-console": 2,
+    "linebreak-style": ["error", "unix"]
   },
-  "overrides": [
-    {
-      "files": ["src"],
-      "parserOptions": {
-        "project": "./tsconfig.json"
-      }
-    },
-    {
-      "files": ["tests/**/*.tsx"],
-      "env": {
-        "jest/globals": true
-      }
-    },
-    {
-      "files": ["./*.js"],
-      "rules": {
-        "@typescript-eslint/no-var-requires": "off"
-      }
-    }
+  "ignorePatterns": [
+    "coverage/*",
+    "rollup.config.js",
+    "babel.config.js"
   ]
 }
