--- a/package.json
+++ b/package.json
@@ -56,10 +56,7 @@
     "build:useReducer": "rollup -c --config-useReducer",
     "clean": "rimraf dist",
     "prepublishOnly": "npm run clean && npm run lint && npm run test && npm run build",
-    "prettier": "prettier '*.{js,json,md}' --write",
-    "prettier:ci": "prettier '*.{js,json,md}' --list-different",
-    "eslint": "eslint --fix '*.{js,json}' '{src,tests}/**/*.{ts,tsx}'",
-    "eslint:ci": "eslint '*.{js,json}' '{src,tests}/**/*.{ts,tsx}'",
+    "lint": "eslint . --ext .js,.ts,.tsx",
     "pretest": "tsc --noEmit",
     "test": "jest",
     "test:ci": "jest",
@@ -68,14 +65,6 @@
   },
   "engines": {
     "node": ">=12.7.0"
-  },
-  "prettier": {
-    "semi": false,
-    "trailingComma": "es5",
-    "singleQuote": true,
-    "bracketSameLine": true,
-    "tabWidth": 2,
-    "printWidth": 80
   },
   "jest": {
     "rootDir": ".",
@@ -123,7 +112,7 @@
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-replace": "^4.0.0",
     "@rollup/plugin-typescript": "^8.3.3",
-    "@swc/core": "^1.2.218",
+    "@swc/core": "^1.2.219",
     "@swc/jest": "^0.2.22",
     "@types/jest": "^28.1.6",
     "@types/react": "^18.0.15",
@@ -132,10 +121,14 @@
     "concurrently": "^7.3.0",
     "esbuild": "^0.14.50",
     "eslint": "^8.20.0",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
-    "prettier": "^2.7.1",
     "react": "^18.2.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.77.2",
