--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,7 @@
-node_modules/
-coverage/
-dist/
-Thumbs.db
-ehthumbs.db
-Desktop.ini
-$RECYCLE.BIN/
-.DS_Store
-.vscode
-.docz/
+.git/
+node_modules
+coverage
+*.log
+dist
 package-lock.json
-coverage/
-.idea
-.rpt2_cache/
-.idea
+.vscode
