--- a/.eslintrc
+++ b/.eslintrc
@@ -8,11 +8,16 @@
     "airbnb/hooks",
     "airbnb-typescript"
   ],
+  "env": {
+    "node": true
+  },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "project": [
-      "./tsconfig.json"
-    ]
+    "ecmaFeatures": {
+      "impliedStrict": true
+    },
+    "ecmaVersion": 6,
+    "sourceType": "module"
   },
   "plugins": [
     "@typescript-eslint"
