--- a/.eslintrc
+++ b/.eslintrc
@@ -52,6 +52,7 @@
   "ignorePatterns": [
     "coverage/*",
     "rollup.config.js",
-    "babel.config.js"
+    "babel.config.js",
+    "jest.config.js"
   ]
 }
