--- a/package.json
+++ b/package.json
@@ -10,21 +10,24 @@
     "useReducer"
   ],
   "author": "Muhamad Iqbal",
-  "main": "dist/index.js",
-  "module": "dist/esm/index.js",
-  "types": "dist/index.d.ts",
+  "main": "lib/index.js",
+  "module": "es/index.js",
+  "types": "es/index.d.ts",
   "sideEffects": false,
   "files": [
-    "dist",
-    "src"
+    "lib",
+    "es",
+    "dist"
   ],
   "scripts": {
-    "prebuild": "shx rm -rf dist",
-    "build": "concurrently -m 8 'yarn:build:*'",
-    "build:base": "rollup -c",
-    "build:createReducer": "rollup -c --config-createReducer",
-    "build:useReducer": "rollup -c --config-useReducer",
-    "clean": "rimraf dist",
+    "build:commonjs": "cross-env BABEL_ENV=commonjs babel src/*.ts --ignore src/types.ts --extensions .ts --out-dir lib ",
+    "build:es": "babel src/*.ts --ignore src/types.ts --extensions .ts --out-dir es",
+    "build:umd": "cross-env NODE_ENV=development rollup -c -o dist/react-reduce-manager.js",
+    "build:umd:min": "cross-env NODE_ENV=production rollup -c -o dist/react-reduce-manager.min.js",
+    "build:types": "tsc",
+    "build": "rimraf dist lib es && npm run build:types && npm run build:commonjs && npm run build:es && npm run build:umd && npm run build:umd:min",
+    "api-types": "api-extractor run --local",
+    "clean": "rimraf lib dist es",
     "prepublishOnly": "npm run clean && npm run lint && npm run test && npm run build",
     "lint": "eslint . --ext .js,.ts,.tsx",
     "pretest": "tsc --noEmit",
@@ -45,11 +48,11 @@
     "@babel/plugin-transform-react-jsx": "^7.18.6",
     "@babel/plugin-transform-typescript": "^7.18.8",
     "@babel/preset-env": "^7.18.9",
-    "@rollup/plugin-alias": "^3.1.9",
+    "@microsoft/api-extractor": "^7.28.6",
     "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-commonjs": "^22.0.1",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-replace": "^4.0.0",
-    "@rollup/plugin-typescript": "^8.3.3",
     "@swc/core": "^1.2.219",
     "@swc/jest": "^0.2.22",
     "@types/jest": "^28.1.6",
@@ -72,7 +75,8 @@
     "rollup": "^2.77.2",
     "rollup-plugin-esbuild": "^4.9.1",
     "rollup-plugin-terser": "^7.0.2",
+    "shx": "^0.3.4",
     "typescript": "^4.7",
-    "shx": "^0.3.4"
+    "cross-env": "^7.0.3"
   }
 }
