--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "clean": "rimraf lib dist es",
     "prepublishOnly": "npm run clean && npm run lint && npm run test && npm run build",
     "lint": "eslint . --ext .js,.ts,.tsx",
-    "pretest": "tsc --noEmit",
     "test": "jest",
     "test:ci": "jest",
     "test:dev": "jest --watch --no-coverage",
@@ -45,9 +44,8 @@
   "devDependencies": {
     "@babel/cli": "^7.18.9",
     "@babel/core": "^7.18.9",
-    "@babel/plugin-transform-react-jsx": "^7.18.6",
-    "@babel/plugin-transform-typescript": "^7.18.8",
     "@babel/preset-env": "^7.18.9",
+    "@babel/preset-typescript": "^7.18.6",
     "@microsoft/api-extractor": "^7.28.6",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^22.0.1",
