--- a/package.json
+++ b/package.json
@@ -10,69 +10,45 @@
     "useReducer"
   ],
   "author": "Muhamad Iqbal",
-  "main": "lib/index.js",
-  "module": "es/index.js",
-  "types": "es/index.d.ts",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "types": "dist/esm/index.d.ts",
   "sideEffects": false,
   "files": [
-    "lib",
-    "es",
     "dist"
   ],
   "scripts": {
-    "build:commonjs": "cross-env BABEL_ENV=commonjs babel src/*.ts --ignore src/types.ts --extensions .ts --out-dir lib ",
-    "build:es": "babel src/*.ts --ignore src/types.ts --extensions .ts --out-dir es",
-    "build:umd": "cross-env NODE_ENV=development rollup -c -o dist/react-reduce-manager.js",
-    "build:umd:min": "cross-env NODE_ENV=production rollup -c -o dist/react-reduce-manager.min.js",
-    "build:types": "tsc",
-    "build": "rimraf dist lib es && npm run build:types && npm run build:commonjs && npm run build:es && npm run build:umd && npm run build:umd:min",
-    "clean": "rimraf lib dist es",
+    "build": "rimraf dist && rollup --c",
+    "clean": "rimraf dist",
     "prepublishOnly": "npm run clean && npm run lint && npm run test && npm run build",
     "lint": "eslint . --ext .js,.ts,.tsx",
-    "test": "jest",
-    "test:ci": "jest",
-    "test:dev": "jest --watch --no-coverage",
-    "test:coverage:watch": "jest --watch"
-  },
-  "engines": {
-    "node": ">=12.7.0"
+    "test": "jest"
   },
   "peerDependencies": {
-    "react": ">=16.8.0"
+    "react": "^18.2.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.18.9",
-    "@babel/core": "^7.18.9",
-    "@babel/preset-env": "^7.18.9",
+    "@babel/preset-env": "^7.19.1",
     "@babel/preset-typescript": "^7.18.6",
     "@rollup/plugin-babel": "^5.3.1",
-    "@rollup/plugin-commonjs": "^22.0.1",
-    "@rollup/plugin-node-resolve": "^13.3.0",
-    "@rollup/plugin-replace": "^4.0.0",
-    "@swc/core": "^1.2.219",
-    "@swc/jest": "^0.2.22",
-    "@types/jest": "^28.1.6",
-    "@types/react": "^18.0.15",
-    "@typescript-eslint/eslint-plugin": "^5.31.0",
-    "@typescript-eslint/parser": "^5.31.0",
-    "concurrently": "^7.3.0",
-    "esbuild": "^0.14.50",
-    "eslint": "^8.20.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-react": "^7.30.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "jest": "^28.1.3",
-    "jest-environment-jsdom": "^28.1.3",
+    "@rollup/plugin-commonjs": "^22.0.2",
+    "@rollup/plugin-node-resolve": "^14.1.0",
+    "@types/jest": "^29.0.3",
+    "@types/react": "^18.0.20",
+    "@typescript-eslint/eslint-plugin": "^5.37.0",
+    "@typescript-eslint/parser": "^5.37.0",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "eslint": "^8.23.1",
+    "jest": "^29.0.3",
+    "jest-environment-jsdom": "^29.0.3",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "rimraf": "^3.0.2",
-    "rollup": "^2.77.2",
-    "rollup-plugin-esbuild": "^4.9.1",
-    "rollup-plugin-terser": "^7.0.2",
-    "shx": "^0.3.4",
-    "typescript": "^4.7",
-    "cross-env": "^7.0.3"
+    "rollup": "^2.79.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-ts": "^3.0.2",
+    "ts-jest": "^29.0.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8"
   }
 }
