--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-reduce-manager",
-  "version": "0.1.10",
+  "version": "0.1.11",
   "license": "MIT",
   "description": "Hook for React useReducer",
   "repository": "github:bcd337/react-reduce-manager",
@@ -50,5 +50,8 @@
     "ts-jest": "^29.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8"
+  },
+  "dependencies": {
+    "my-library-app": "file:../my-library-app"
   }
 }
