--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "clean": "rimraf dist",
     "prepublishOnly": "npm run clean && npm run lint && npm run test && npm run build",
     "lint": "eslint . --ext .js,.ts,.tsx",
-    "test": "jest"
+    "test": "jest",
+    "copy": "rimraf ../react-reduce-manager-dist && cpy  ./dist ../react-reduce-manager-dist && cpy ./package.json ../react-reduce-manager-dist"
   },
   "peerDependencies": {
     "react": "^18.2.0"
@@ -38,6 +39,7 @@
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
     "babel-plugin-module-resolver": "^4.1.0",
+    "cpy": "^9.0.1",
     "eslint": "^8.23.1",
     "jest": "^29.0.3",
     "jest-environment-jsdom": "^29.0.3",
@@ -50,8 +52,5 @@
     "ts-jest": "^29.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8"
-  },
-  "dependencies": {
-    "my-library-app": "file:../my-library-app"
   }
 }
